# ConvFinQAAssignment

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
domain/: __init__.py  _data_transfer_objects.py  _factories_dto.py  _langchain.py
endpoints/: __init__.py  _api_RAG.py  _api_doc_ingest.py
infrastructure/: __init__.py  _chromadb.py  _duckdb.py  _ollama.py  _openai.py
tests/: conftest.py
tests/domain/: test_data_transfer_objects.py  test_factories_dto.py  test_langchain.py
tests/infrastructure/: test_chromadb.py  test_duckdb.py  test_openai.py
tests/test_endpoints/: test_api_RAG.py  test_api_doc_ingest.py
tests/usecases/RAG/: test_generate_responses.py  test_retrieve_context.py
tests/usecases/doc_ingest/: test_build_index.py  test_tokenize.py
usecases/: __init__.py
usecases/RAG/: __init__.py  _generate_responses.py  _generate_responses_with_summary.py  _retrieve_context.py
usecases/doc_ingest/: __init__.py  _build_index.py  _tokenize.py
