[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_template"
version = "0.1.0"
description = "…your description…"
readme = "readme.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["endpoints", "domain", "infrastructure", "usecases"]
